[CB] REFACTOR : 코드 리펙토링 진행